--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --main-black: #000000;
     --main-white: #ffffff;
 
-    --hover-black: #242424;
+    --secondary-black: #242424;
     --breadcrumbs-black: #ABA9A7;
     --disabled-gray: #F9F6F3;
     --light-gray: #E5E5E5;
@@ -71,7 +71,7 @@ img {
 .site-navigation a:focus,
 .user-navigation a:hover,
 .user-navigation a:focus {
-    background-color: var(--hover-black);
+    background-color: var(--secondary-black);
 }
 
 /*benefits*/
@@ -141,3 +141,126 @@ img {
     opacity: 0.5;
     background-color: var(--main-black);
 }
+
+/*contacts*/
+
+.contact-phone {
+    color: inherit;
+}
+
+/*appointment*/
+
+.appointment-item input {
+    font: inherit;
+    background-color: transparent;
+    border: 2px solid var(--main-black);
+}
+
+.appointment-item input:focus {
+    border-color: var(--special);
+}
+
+/*main footer*/
+
+.main-footer {
+    color: var(--main-white);
+    background-color: var(--secondary-black);
+    background-image: url("../images/pattern-dark.png");
+    background-position: 0 0;
+    background-repeat: repeat;
+}
+
+.footer-contacts a {
+    color: var(--main-white);
+    text-decoration: underline;
+}
+
+.footer-contacts a:hover,
+.footer-contacts a:focus {
+    text-decoration: none;
+}
+
+.footer-social-media {
+    text-align: center;
+}
+
+.footer-social-media ul {
+    list-style: none;
+}
+
+.footer-social-media h2 {
+    font-size: 14px;
+}
+
+/*social button*/
+
+.social-button {
+    color: inherit;
+}
+
+.social-button:hover,
+.social-button:focus {
+    background-color: var(--main-white);
+}
+
+.footer-copyright .button:hover,
+.footer-copyright .button:focus {
+    color: var(--main-black);
+    background-color: var(--main-white);
+}
+
+/*modal*/
+
+.modal {
+    color: var(--main-black);
+    background-color: var(--main-white);
+    background-image: url("../images/pattern-light.png");
+    background-position: 0 0;
+    background-repeat: repeat;
+    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+.modal-login h2 {
+    font-size: 30px;
+    line-height: 42px;
+}
+
+/*login form*/
+
+.login-form input[type="email"],
+.login-form input[type="password"] {
+    font: inherit;
+    color: var(--main-black);
+    text-transform: uppercase;
+    background-color: var(--disabled-gray);
+    border: 2px solid var(--main-black);
+}
+
+.login-form input:focus {
+    border-color: var(--special);
+}
+
+.login-icon-user {
+    background-image: url("images/user-icon.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.login-icon-password {
+    background-image: url("images/lock-icon.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/*forgot password*/
+
+.restore {
+    color: var(--main-black);
+    text-decoration: underline;
+}
+
+.restore:hover,
+.restore:focus {
+    text-decoration: none;
+}
+
