--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,47 @@ img {
     background-color: var(--main-white);
 }
 
+/*product photos*/
+
+.product-photo-thumbnails {
+    list-style: none;
+}
+
+.product-photo-thumbnails li {
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-photo-thumbnails li:hover {
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.product-photo-full {
+    display: block;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.product-sku {
+    text-align: right;
+    color: var(--breadcrumbs-black);
+}
+
+.product-price b {
+    line-height: 24px;
+    text-align: center;
+    background-color: var(--light-gray);
+}
+
+/*product info*/
+
+.product-description h3 {
+    font-size: 24px;
+    line-height: 30px;
+}
+
+.product-description ul {
+    list-style: none;
+}
+
 /*main footer*/
 
 .main-footer {
