--- a/css/style.css
+++ b/css/style.css
@@ -39,26 +39,111 @@ img {
     height: auto;
 }
 
+/*grid*/
+
+.page {
+    height: 100%;
+}
+
+.page-body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    align-content: start;
+}
+
+/*grid for inner pages*/
+
+.page-catalog {
+    display: grid;
+    grid-template-columns: 180px 1fr;
+    align-content: start;
+}
+
+.page-catalog .page-title {
+    grid-column: 1 / -1;
+}
+
+.page-catalog .breadcrumbs {
+    grid-column: 1 / -1;
+    margin-bottom: 40px;
+}
+
+.page-product {
+    display: grid;
+    grid-template-columns: 460px 1fr;
+    align-content: start;
+}
+
+.page-product .page-title {
+    grid-column: 1 / -1;
+}
+
+.page-product .breadcrumbs {
+    grid-column: 1 / -1;
+    margin-bottom: 40px;
+}
+
 /*main header*/
 
-.inner-page .main-header {
-    background-color: var(--main-black);
+.main-header {
+    margin-bottom: 70px;
 }
+
+/*.inner-page .main-header {*/
+/*    background-color: var(--main-black);*/
+/*}*/
 
 /*main navigation*/
 
 .main-navigation {
+    display: grid;
     font-size: 16px;
     line-height: 20px;
     color: var(--main-white);
     background-color: transparent;
 }
 
-.main-navigation-wrapper {
+/*container*/
+
+.container {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+/*logo*/
+
+.main-header-logo {
+    order: 1;
+    justify-self: center;
+}
+
+.main-header-bar {
     background-color: var(--main-black);
 }
 
+.main-navigation-wrapper {
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.inner-page .main-navigation-wrapper {
+    grid-template-columns: 170px 1fr min-content;
+}
+
+.inner-page .main-header-logo {
+    order: 0;
+}
+
+/*site navigation*/
+
 .site-navigation {
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
@@ -82,7 +167,16 @@ img {
 
 /*benefits*/
 
+.benefits {
+    margin-bottom: 80px;
+}
+
 .benefits-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
@@ -95,9 +189,16 @@ img {
     line-height: 42px;
 }
 
+.benefits-item p {
+    margin: 0 10px;
+}
+
 /*index columns*/
 
 .index-columns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 35px;
     color: var(--main-black);
     background-color: var(--main-white);
     background-image: url("../images/pattern-light.png");
@@ -112,11 +213,17 @@ img {
 
 /*news*/
 
+.news {
+}
+
 .news-list {
     list-style: none;
 }
 
 /*gallery*/
+
+.gallery {
+}
 
 .gallery-content {
     background-color: var(--breadcrumbs-black);
@@ -177,6 +284,8 @@ img {
 }
 
 .page-title {
+    margin: 0 0 15px;
+    padding: 0;
     font-size: 30px;
     line-height: 42px;
 }
@@ -184,6 +293,8 @@ img {
 /*breadcrumbs*/
 
 .breadcrumbs {
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -218,6 +329,10 @@ img {
 }
 
 /*catalog*/
+
+.catalog {
+    margin-left: 60px;
+}
 
 .catalog-list {
     list-style: none;
@@ -280,6 +395,7 @@ img {
 
 /*product photos*/
 
+
 .product-photo-thumbnails {
     list-style: none;
 }
@@ -294,6 +410,9 @@ img {
 
 .product-photo-full {
     display: block;
+    width: 460px;
+    height: 498px;
+    margin: 0 0 20px;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -310,23 +429,70 @@ img {
 
 /*product info*/
 
-.product-description h3 {
+.product-info {
+    width: 390px;
+    padding-top: 23px;
+    padding-left: 80px;
+}
+
+.product-info p {
+    margin: 0;
+}
+
+.product-description {
+    padding-right: 10px;
+    margin-bottom: 29px;
+}
+
+.product-description p {
+    width: 200px;
+}
+
+.product-info .product-price {
+    margin-bottom: 63px;
+}
+
+.product-price .button {
+    padding-right: 17px;
+    padding-left: 17px;
+}
+
+.product-info h3 {
+    margin: 0 0 27px;
     font-size: 24px;
     line-height: 30px;
 }
 
-.product-description ul {
+.product-info ul {
     list-style: none;
+}
+
+.product-info li {
+    position: relative;
 }
 
 /*main footer*/
 
 .main-footer {
+    padding: 60px 0;
+    margin-top: 65px;
     color: var(--main-white);
     background-color: var(--secondary-black);
     background-image: url("../images/pattern-dark.png");
     background-position: 0 0;
     background-repeat: repeat;
+    outline: 5px solid rgba(255, 0, 0, 0.7);
+    outline-offset: -5px;
+}
+
+.main-footer .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer-contacts {
+    margin: 0;
+    width: 320px;
 }
 
 .footer-contacts a {
@@ -340,6 +506,8 @@ img {
 }
 
 .footer-social-media {
+    width: 145px;
+    justify-self: center;
     text-align: center;
 }
 
@@ -360,6 +528,12 @@ img {
 .social-button:hover,
 .social-button:focus {
     background-color: var(--main-white);
+}
+
+.footer-copyright {
+    max-width: 150px;
+    margin: 0;
+    justify-self: end;
 }
 
 .footer-copyright .button:hover,
