--- a/css/style.css
+++ b/css/style.css
@@ -722,17 +722,26 @@ img {
 
 /*product photos*/
 
-
 .product-photo-thumbnails {
     list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
 }
 
 .product-photo-thumbnails li {
+    width: 140px;
+    height: 149px;
+    margin-right: 20px;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 .product-photo-thumbnails li:hover {
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.product-photo-thumbnails li:nth-child(3n) {
+    margin-right: 0;
 }
 
 .product-photo-full {
@@ -749,9 +758,12 @@ img {
 }
 
 .product-price b {
-    line-height: 24px;
+    line-height: 20px;
     text-align: center;
     background-color: var(--light-gray);
+    width: 112px;
+    padding: 13px 36px 11px 36px;
+    box-sizing: border-box;
 }
 
 /*product info*/
@@ -767,12 +779,18 @@ img {
 }
 
 .product-description {
+    display: flex;
+    justify-content: space-between;
     padding-right: 10px;
     margin-bottom: 29px;
 }
 
 .product-description p {
     width: 200px;
+}
+
+.product-info .product-text {
+    margin-bottom: 35px;
 }
 
 .product-info .product-price {
@@ -792,10 +810,24 @@ img {
 
 .product-info ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .product-info li {
     position: relative;
+    padding-left: 23px;
+}
+
+.product-info li::before {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: 2px;
+    width: 8px;
+    height: 8px;
+    background-color: var(--main-black);
+    transform: rotate(45deg);
 }
 
 /*main footer*/
