--- a/css/style.css
+++ b/css/style.css
@@ -1090,13 +1090,60 @@ img {
 /*modal*/
 
 .modal {
-    /*display: none;*/
+    display: none;
+    position:fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
     color: var(--main-black);
     background-color: var(--disabled-gray);
     background-image: url("../images/pattern-light.png");
     background-position: 0 0;
     background-repeat: repeat;
     box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+}
+
+/*modal close*/
+
+.modal-close {
+    position: absolute;
+    top: 0;
+    right: -34px;
+    width: 22px;
+    height: 22px;
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 2px;
+    width: 19px;
+    height: 3px;
+    background-color: var(--breadcrumbs-black);
+}
+
+.modal-close::before {
+    transform: rotate(45deg);
+}
+
+.modal-close::after {
+    transform: rotate(-45deg);
+}
+
+/*modal login*/
+
+.modal-login {
+    top: 120px;
+    bottom: auto;
+    width: 300px;
+    padding: 50px 80px;
 }
 
 .modal-login h2 {
@@ -1107,6 +1154,18 @@ img {
 
 .modal-description {
     margin: 0 0 10px;
+}
+
+/*modal map*/
+
+.modal-map {
+    width: 766px;
+    height: 560px;
+    border: 7px solid white;
+}
+
+.modal-map img {
+    display: block;
 }
 
 /*login form*/
